unpackaged/objects/Points_Bucket__c.object
<CustomObject>
    <description>Funding source of a Challenge</description>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <description>Current balance of the Points Bucket</description>
        <inlineHelpText>Current balance of the Points Bucket</inlineHelpText>
        <label>Current Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>The Job Title of the owner of this Points bucket</description>
        <formula>Owner__r.Title</formula>
        <inlineHelpText>The Job Title of the owner of this Points bucket</inlineHelpText>
        <label>Job Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Direct_Reports__c</fullName>
        <description>Number of direct reports that this Points Bucket owner has, as a manager.  This number is used solely for computing the amount of points to add during periodic replenishment.</description>
        <inlineHelpText>Number of direct reports that this Points Bucket owner has, as a manager.  This number is used solely for computing the amount of points to add during periodic replenishment.</inlineHelpText>
        <label>Number of Direct Reports</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Employee_ID__c</fullName>
        <formula>Owner__r.WD_Employee_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Employee ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Owner of the Points Bucket</description>
        <inlineHelpText>Owner of the Points Bucket</inlineHelpText>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Points_Buckets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner_is_Active__c</fullName>
        <description>Formula field, indicating if the owner of this Points Bucket is an active SFDC user.</description>
        <formula>Owner__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field, indicating if the owner of this Points Bucket is an active SFDC user.</inlineHelpText>
        <label>Owner is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_s_Manager__c</fullName>
        <description>The manager of the person who owns the points bucket. Used for reporting purposes only.</description>
        <formula>Owner__r.Manager.Full_Name__c</formula>
        <label>Owner&apos;s Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replenishment_Amount__c</fullName>
        <description>Formula field that shows, based on the &quot;Replenishment Type&quot; field, how many additional points to add to a Points Bucket during a periodic replenishment.</description>
        <formula>CASE(Replenishment_Type__c,
  &quot;Office Manager&quot;, 1500,
  &quot;People Manager&quot;, 1000 * Number_of_Direct_Reports__c,
  &quot;Client Services Director&quot;, 5000 + (1000 * Number_of_Direct_Reports__c),
  &quot;Partner&quot;, 5000 + (1000 * Number_of_Direct_Reports__c),
  &quot;Account Executive&quot;, 5000 + (1000 * Number_of_Direct_Reports__c),
  &quot;Solutions Architect&quot;, 5000 + (1000 * Number_of_Direct_Reports__c),
  &quot;Director&quot;, MAX(5000, 1000 * Number_of_Direct_Reports__c),
  &quot;VP&quot;, 12500,
  &quot;Senior Management&quot;, 25000,
  null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula field that shows, based on the &quot;Replenishment Type&quot; field, how many additional points to add to a Points Bucket during a periodic replenishment.</inlineHelpText>
        <label>Replenishment Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replenishment_Type__c</fullName>
        <description>Some points buckets are periodically replenished (e.g. managers get 1,000 points per quarter, per team member).  This field, in conjunction with a formula, indicates how many points to top off the points bucket with.</description>
        <inlineHelpText>Some points buckets are periodically replenished (e.g. managers get 1,000 points per quarter, per team member).  This field, in conjunction with a formula, indicates how many points to top off the points bucket with.</inlineHelpText>
        <label>Replenishment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Office Manager</fullName>
                </value>
                <value>
                    <fullName>People Manager</fullName>
                </value>
                <value>
                    <fullName>Client Services Director</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Solutions Architect</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>Senior Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Points Bucket</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Current_Balance__c</columns>
        <columns>Owner__c</columns>
        <columns>Owner_is_Active__c</columns>
        <columns>Replenishment_Type__c</columns>
        <columns>Number_of_Direct_Reports__c</columns>
        <columns>Replenishment_Amount__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Points_buckets_for_Inactive_Users</fullName>
        <columns>NAME</columns>
        <columns>Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner_is_Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Points buckets for Inactive Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>AppirioITSupport259231</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Replenishments</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Current_Balance__c</columns>
        <columns>Owner_Employee_ID__c</columns>
        <columns>Owner__c</columns>
        <columns>Replenishment_Type__c</columns>
        <columns>Number_of_Direct_Reports__c</columns>
        <columns>Replenishment_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Replenishment_Type__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Replenishments</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>by_owner</fullName>
        <columns>NAME</columns>
        <columns>Owner__c</columns>
        <columns>Title__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owner__c</field>
            <operation>contains</operation>
            <value>price</value>
        </filters>
        <label>Points bucket by owner</label>
        <language>en_US</language>
        <sharedTo>
            <group>AppirioITSupport259231</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PB-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Points Buckets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>